==> apache/nuttx/arch/arm/src/lm3s/lm3s_serial.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <unistd.h>
#include <semaphore.h>
#include <string.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/irq.h>
#include <nuttx/arch.h>
#include <nuttx/serial.h>
#include <arch/serial.h>
#include "chip.h"
#include "up_arch.h"
#include "up_internal.h"
#include "os_internal.h"
#  define CONFIG_UART1_DISABLE 1
#  define CONFIG_UART2_DISABLE 1
#  define HAVE_CONSOLE 1
#  define HAVE_CONSOLE 1
#  define HAVE_CONSOLE 1
#  define CONSOLE_DEV     g_uart0port     /* UART0 is console */
#  define TTYS0_DEV       g_uart0port     /* UART0 is ttyS0 */
#    define TTYS1_DEV     g_uart1port     /* UART1 is ttyS1 */
#      define TTYS2_DEV   g_uart2port     /* UART2 is ttyS2 */
#      define TTYS1_DEV   g_uart2port     /* UART2 is ttyS1 */
#  define CONSOLE_DEV     g_uart1port     /* UART1 is console */
#  define TTYS0_DEV       g_uart1port     /* UART1 is ttyS0 */
#    define TTYS1_DEV     g_uart0port     /* UART0 is ttyS1 */
#      define TTYS2_DEV   g_uart2port     /* UART2 is ttyS2 */
#      define TTYS1_DEV   g_uart2port     /* UART2 is ttyS1 */
#  define CONSOLE_DEV     g_uart2port     /* UART2 is console */
#  define TTYS0_DEV       g_uart2port     /* UART2 is ttyS0 */
#    define TTYS1_DEV     g_uart0port     /* UART0 is ttyS1 */
#      define TTYS2_DEV   g_uart2port     /* UART2 is ttyS2 */
#      define TTYS1_DEV   g_uart2port     /* UART2 is ttyS1 */

static int up_setup(struct uart_dev_s *dev)
{
  struct up_dev_s *priv = (struct up_dev_s*)dev->priv;
  uint32_t lcrh;
  uint32_t ctl;
#ifndef CONFIG_SUPPRESS_UART_CONFIG
  uint32_t den;
  uint32_t brdi;
  uint32_t remainder;
  uint32_t divfrac;

  /* Note:  The logic here depends on the fact that that the UART module
   * was enabled and the GPIOs were configured in up_lowsetup().
   */

  /* Disable the UART by clearing the UARTEN bit in the UART CTL register */

  ctl = up_serialin(priv, LM3S_UART_CTL_OFFSET);
  ctl &= ~UART_CTL_UARTEN;
  up_serialout(priv, LM3S_UART_CTL_OFFSET, ctl);

  /* Calculate BAUD rate from the SYS clock:
   *
   * "The baud-rate divisor is a 22-bit number consisting of a 16-bit integer
   *  and a 6-bit fractional part. The number formed by these two values is
   *  used by the baud-rate generator to determine the bit period. Having a
   *  fractional baud-rate divider allows the UART to generate all the standard
   *  baud rates.
   *
   * "The 16-bit integer is loaded through the UART Integer Baud-Rate Divisor
   *  (UARTIBRD) register ... and the 6-bit fractional part is loaded with the
   *  UART Fractional Baud-Rate Divisor (UARTFBRD) register... The baud-rate
   *  divisor (BRD) has the following relationship to the system clock (where
   *  BRDI is the integer part of the BRD and BRDF is the fractional part,
   *  separated by a decimal place.):
   *
   *    "BRD = BRDI + BRDF = UARTSysClk / (16 * Baud Rate)
   *
   * "where UARTSysClk is the system clock connected to the UART. The 6-bit
   *  fractional number (that is to be loaded into the DIVFRAC bit field in the
   *  UARTFBRD register) can be calculated by taking the fractional part of the
   *  baud-rate divisor, multiplying it by 64, and adding 0.5 to account for
   *  rounding errors:
   *
   *    "UARTFBRD[DIVFRAC] = integer(BRDF * 64 + 0.5)
   *
   * "The UART generates an internal baud-rate reference clock at 16x the baud-
   *  rate (referred to as Baud16). This reference clock is divided by 16 to
   *  generate the transmit clock, and is used for error detection during receive
   *  operations.
   *
   * "Along with the UART Line Control, High Byte (UARTLCRH) register ..., the
   *  UARTIBRD and UARTFBRD registers form an internal 30-bit register. This
   *  internal register is only updated when a write operation to UARTLCRH is
   *  performed, so any changes to the baud-rate divisor must be followed by a
   *  write to the UARTLCRH register for the changes to take effect. ..."
   */

  den       = priv->baud << 4;
  brdi      = SYSCLK_FREQUENCY / den;
  remainder = SYSCLK_FREQUENCY - den * brdi;
  divfrac   = ((remainder << 6) + (den >> 1)) / den;

  up_serialout(priv, LM3S_UART_IBRD_OFFSET, brdi);
  up_serialout(priv, LM3S_UART_FBRD_OFFSET, divfrac);

  /* Set up the LCRH register */

  lcrh = 0;
  switch (priv->bits)
    {
      case 5:
        lcrh |= UART_LCRH_WLEN_5BITS;
        break;
      case 6:
        lcrh |= UART_LCRH_WLEN_6BITS;
        break;
      case 7:
        lcrh |= UART_LCRH_WLEN_7BITS;
        break;
      case 8:
      default:
        lcrh |= UART_LCRH_WLEN_8BITS;
        break;
    }

  switch (priv->parity)
    {
      case 0:
      default:
        break;
      case 1:
        lcrh |= UART_LCRH_PEN;
        break;
      case 2:
        lcrh |= UART_LCRH_PEN|UART_LCRH_EPS;
        break;
    }

  if (priv->stopbits2)
    {
      lcrh |= UART_LCRH_STP2;
    }

  up_serialout(priv, LM3S_UART_LCRH_OFFSET, lcrh);
#endif

  /* Set the UART to interrupt whenever the TX FIFO is almost empty or when
   * any character is received.
   */

  up_serialout(priv, LM3S_UART_IFLS_OFFSET, UART_IFLS_TXIFLSEL_18th|UART_IFLS_RXIFLSEL_18th);

  /* Flush the Rx and Tx FIFOs -- How do you do that?*/

  /* Enable Rx interrupts from the UART except for Tx interrupts.  We don't want
   * Tx interrupts until we have something to send.  We will check for serial
   * errors as part of Rx interrupt processing (no interrupts will be received
   * yet because the interrupt is still disabled at the interrupt controller.
   */

  up_serialout(priv, LM3S_UART_IM_OFFSET, UART_IM_RXIM|UART_IM_RTIM);

  /* Enable the FIFOs */

#ifdef CONFIG_SUPPRESS_UART_CONFIG
  lcrh = up_serialin(priv, LM3S_UART_LCRH_OFFSET);
#endif
  lcrh |= UART_LCRH_FEN;
  up_serialout(priv, LM3S_UART_LCRH_OFFSET, lcrh);

  /* Enable Rx, Tx, and the UART */

#ifdef CONFIG_SUPPRESS_UART_CONFIG
  ctl = up_serialin(priv, LM3S_UART_CTL_OFFSET);
#endif
  ctl |= (UART_CTL_UARTEN|UART_CTL_TXE|UART_CTL_RXE);
  up_serialout(priv, LM3S_UART_CTL_OFFSET, ctl);

  /* Set up the cache IM value */

  priv->im = up_serialin(priv, LM3S_UART_IM_OFFSET);
  return OK;
}

static void up_rxint(struct uart_dev_s *dev, bool enable)
{
  struct up_dev_s *priv = (struct up_dev_s*)dev->priv;
  if (enable)
    {
      /* Receive an interrupt when their is anything in the Rx FIFO (or an Rx
       * timeout occurs.
       */

#ifndef CONFIG_SUPPRESS_SERIAL_INTS
      priv->im |= (UART_IM_RXIM|UART_IM_RTIM);
#endif
    }
  else
    {
      priv->im &= ~(UART_IM_RXIM|UART_IM_RTIM);
    }
  up_serialout(priv, LM3S_UART_IM_OFFSET, priv->im);
}

static bool up_rxavailable(struct uart_dev_s *dev)
{
  struct up_dev_s *priv = (struct up_dev_s*)dev->priv;
  return ((up_serialin(priv, LM3S_UART_FR_OFFSET) & UART_FR_RXFE) == 0);
}

static void up_txint(struct uart_dev_s *dev, bool enable)
{
  struct up_dev_s *priv = (struct up_dev_s*)dev->priv;
  irqstate_t flags;

  flags = irqsave();
  if (enable)
    {
      /* Set to receive an interrupt when the TX fifo is half emptied */

#ifndef CONFIG_SUPPRESS_SERIAL_INTS
      priv->im |= UART_IM_TXIM;
      up_serialout(priv, LM3S_UART_IM_OFFSET, priv->im);

      /* The serial driver wants an interrupt here, but will not get get
       * one unless we "prime the pump."  I believe that this is because
       * behave like a level interrupt and the LM3S interrupts behave
       * (at least by default) like edge interrupts.
       *
       * In any event, faking a TX interrupt here solves the problem;
       * Call uart_xmitchars() just as would have been done if we recieved
       * the TX interrupt.
       */

      uart_xmitchars(dev);
#endif
    }
  else
    {
      /* Disable the TX interrupt */

      priv->im &= ~UART_IM_TXIM;
      up_serialout(priv, LM3S_UART_IM_OFFSET, priv->im);
    }
  irqrestore(flags);
}

static bool up_txready(struct uart_dev_s *dev)
{
  struct up_dev_s *priv = (struct up_dev_s*)dev->priv;
  return ((up_serialin(priv, LM3S_UART_FR_OFFSET) & UART_FR_TXFF) == 0);
}

static bool up_txempty(struct uart_dev_s *dev)
{
  struct up_dev_s *priv = (struct up_dev_s*)dev->priv;
  return ((up_serialin(priv, LM3S_UART_FR_OFFSET) & UART_FR_TXFE) != 0);
}
